--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,31 @@
         h1 {
             color: #333;
         }
+        ul {
+            margin-top: 20px;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Diverge Playground</h1>
         <p>Welcome to the Diverge Playground project!</p>
+        
+        <h2>Simulations</h2>
+        <ul>
+            <li><a href="/sims/vial.html">2D Fluid Simulation (Vial)</a></li>
+        </ul>
     </div>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html> 
