fucking awesome dithering metaballs

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
         <h2>Simulations</h2>
         <ul>
             <li><a href="/sims/vial.html">2D Fluid Simulation (Vial)</a></li>
+            <li><a href="/sims/lenia.html">Lenia - Continuous Cellular Automata</a></li>
         </ul>
     </div>
     <script type="module" src="./main.js"></script>
